# Deploy_ML_Model_Flask

./: .env.example  Dockerfile  Procfile  app.py  application.py  cloudbuild.yaml  docker-compose.yml  langgraph.json  language=requirements.txt  pyproject.toml  readme.md  requirements.txt
Deploy_ML_Model_Flask/: cloudbuild.yaml
devops_agent/agent/: devops.py
devops_agent/config/: devops.py
devops_agent/data/: devops_prompt.py
devops_agent/db/: asyncpostgres.py
devops_agent/integrations/: devops.py  handlers.py
devops_agent/logs/: logging.py
devops_agent/rag/: constants.py  devops.py  utils.py
devops_agent/rag/data/: aws-cli.md
devops_agent/states/: devops.py
devops_agent/tools/: devops.py
